syntax = "proto3";

package yandex.cloud.events.loadbalancer;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/loadbalancer/v1/health_check.proto";
import "yandex/cloud/loadbalancer/v1/network_load_balancer.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/loadbalancer;loadbalancer";
option java_package = "yandex.cloud.api.events.loadbalancer";

message CreateNetworkLoadBalancer {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
        string region_id = 3 [(required) = true];
        yandex.cloud.loadbalancer.v1.NetworkLoadBalancer.Type type = 4 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.Listener listeners = 5;
        repeated yandex.cloud.loadbalancer.v1.AttachedTargetGroup attached_target_groups = 6;
    }
}

message UpdateNetworkLoadBalancer {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
        string region_id = 3 [(required) = true];
        yandex.cloud.loadbalancer.v1.NetworkLoadBalancer.Type type = 4 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.Listener listeners = 5;
        repeated yandex.cloud.loadbalancer.v1.AttachedTargetGroup attached_target_groups = 6;
    }
}

message DeleteNetworkLoadBalancer {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
    }
}

message StartNetworkLoadBalancer {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
    }
}

message StopNetworkLoadBalancer {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
    }
}

message AttachNetworkLoadBalancerTargetGroup {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
        string target_group_id = 3 [(required) = true];
        string target_group_name = 4 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.HealthCheck health_checks = 5;
    }
}

message DetachNetworkLoadBalancerTargetGroup {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
        string target_group_id = 3 [(required) = true];
        string target_group_name = 4 [(required) = true];
        repeated yandex.cloud.loadbalancer.v1.HealthCheck health_checks = 5;
    }
}

message AddNetworkLoadBalancerListener {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
        yandex.cloud.loadbalancer.v1.Listener listener = 3 [(required) = true];
    }
}

message RemoveNetworkLoadBalancerListener {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string network_load_balancer_id = 1 [(required) = true];
        string network_load_balancer_name = 2 [(required) = true];
        yandex.cloud.loadbalancer.v1.Listener listener = 3 [(required) = true];
    }
}
